<resources>
    <string name="app_name">IT school</string>
    <string name="start2">Ваш личный кабинет</string>
    <string name="start3">Личный кабинет</string>
    <string name="start4">Вход</string>
    <string name="start5">Регистрация</string>
    <string name="startBut1">Главная</string>
    <string name="startBut2">Студенты</string>
    <string name="startBut3">Блог</string>
    <string name="startHint1">Ваше имя</string>
    <string name="startHint2">Ваш номер телефона</string>
    <string name="startBut4">Отправить свою заявку</string>
    <string name="startBut5">Показать свою заявку</string>
    <string name="student2">Посмотреть \n анкету</string>
    <string name="contact">Список учеников</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="telephone">Контактный телефон</string>
    <string name="name">Имя</string>


</resources>